# BLSDashboard

./: .gitignore  README.md  main.py  requirements.txt  requirements_dev.txt  setup.cfg  test.py
secrets/: README.md
src/dashboard/: main.py
src/tests/: test_main.py
