[metadata]
name = BLSDasboard
description = Bureau of Labor Statistics Dashboard
author = Garrett Ladley
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    dashboard
install_requires =
    pandas>=1.5.1
    plotly>=5.11.0
    requests>=2.28.1
    dash>=2.6.2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
dashboard = py.typed

[flake8]
max-line-length = 160